[project]
name = "rerank-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.15.0",
    "dotenv>=0.9.9",
    "flagembedding>=1.3.5",
    "jinaai>=0.2.10",
    "matplotlib>=3.10.3",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
]
